@@ -221,3 +221,4 @@ Fixes:
     * Fix edje entry to respect filters and if input filtered out, don't clear selections
     * Fix evas buffer engine allocation with non alpha output
     * Evas font: click on left/right half of char does matter now.
+    * Evas font: If OS/2 table is available and the font is demi-bold, don't do runtime emboldment.
