@@ -1,3 +1,8 @@
+2013-04-04  Tom Hacohen
+
+        * Evas font: If OS/2 table is available and the font is demi-bold,
+	  don't do runtime emboldment.
+
 2013-04-04  Yakov Goldberg
 
         * Evas font: char position, returned by
